--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ certifi==2022.6.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
+Flask-SQLAlchemy==2.5.1
 idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+psycopg2==2.9.3
 requests==2.28.1
 SQLAlchemy==1.4.41
 urllib3==1.26.12
