--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+passlib==1.7.4
 psycopg2==2.9.3
 requests==2.28.1
 SQLAlchemy==1.4.41
