--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 passlib==1.7.4
 psycopg2==2.9.3
+PyJWT==2.5.0
+pytz==2022.2.1
 requests==2.28.1
 SQLAlchemy==1.4.41
+twilio==7.14.1
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
