--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2022.6.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
+flask-crontab==0.1.2
 Flask-SQLAlchemy==2.5.1
 idna==3.3
 importlib-metadata==4.12.0
